--- a/app/src/main/res/layout/content_config_player.xml
+++ b/app/src/main/res/layout/content_config_player.xml
@@ -250,8 +250,16 @@
         android:layout_height="wrap_content"
         android:id="@+id/create_player_button"
         android:layout_below="@id/player_points_header"
-        android:layout_centerInParent="true"
         android:layout_marginTop="40sp"
         android:text="Create Player"
+        android:layout_alignParentRight = "true"
         android:onClick="onCreatePlayerPressed" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cancel_button"
+        android:layout_below="@id/player_points_header"
+        android:layout_marginTop="40sp"
+        android:text="Back"
+        android:onClick="onCancel" />
 </RelativeLayout>
