--- a/app/src/main/res/layout/content_welcome.xml
+++ b/app/src/main/res/layout/content_welcome.xml
@@ -3,26 +3,33 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/create_new_game"
-        android:layout_below="@id/skills_header"
-        android:layout_alignTop="@id/pilot_header"
-        android:layout_alignParentEnd="true"
-        android:text="+"
-        android:textSize="20sp"
-        android:onClick="createNewGame" />
+        android:id="@+id/game_title"
+        android:text="Space Trader"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:textSize="65sp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/continue_game"
-        android:layout_below="@id/skills_header"
-        android:layout_alignTop="@id/pilot_header"
-        android:layout_alignParentEnd="true"
-        android:text="+"
+        android:layout_below="@id/create_new_game"
+        android:text="Load Saved Game"
         android:textSize="20sp"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:layout_marginTop="45dp"
         android:onClick="continueGame" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/create_new_game"
+        android:layout_below="@id/game_title"
+        android:text="Create New Game"
+        android:textSize="20sp"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:layout_marginTop="150dp"
+        android:onClick="createNewGame" />
 </LinearLayout>
