--- a/app/src/main/res/layout/player_item.xml
+++ b/app/src/main/res/layout/player_item.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10sp">
 
     <TextView
-        android:id="@+id/player_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/player_name"
         android:textSize="20sp" />
 
-</LinearLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/edit_player_button"
+        android:text="Edit"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="10sp"
+        android:onClick="onEditPressed" />
+
+</RelativeLayout>
