--- a/app/src/main/res/layout/player_item.xml
+++ b/app/src/main/res/layout/player_item.xml
@@ -11,13 +11,12 @@
         android:id="@+id/player_name"
         android:textSize="20sp" />
 
-    <Button
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/edit_player_button"
-        android:text="Edit"
+        android:id="@+id/edit_player_icon"
+        android:src="@mipmap/ic_launcher_round"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="10sp"
-        android:onClick="onEditPressed" />
+        android:layout_marginEnd="10sp" />
 
 </RelativeLayout>
