--- a/app/src/main/res/layout/content_cargo.xml
+++ b/app/src/main/res/layout/content_cargo.xml
@@ -7,19 +7,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/hello_world"
-        android:text="Hello World this is a test"
+        android:text="this is cargo"
         android:layout_gravity="center_vertical|center_horizontal"
         android:textSize="30dp"
         />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/cargo_button"
-        android:text="CARGO"
-        android:textSize="20sp"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:layout_marginTop="150dp"
-        android:onClick="createNewGame" />
+
 
 </LinearLayout>
