Started market layout

--- a/app/src/main/res/layout/content_cargo.xml
+++ b/app/src/main/res/layout/content_cargo.xml
@@ -9,9 +9,5 @@
         android:id="@+id/hello_world"
         android:text="this is cargo"
         android:layout_gravity="center_vertical|center_horizontal"
-        android:textSize="30dp"
-        />
-
-
-
+        android:textSize="30dp" />
 </LinearLayout>
