Changed scope to one game

--- a/app/src/main/res/layout/content_market.xml
+++ b/app/src/main/res/layout/content_market.xml
@@ -4,33 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/planet_title"
-        android:text="Market"
-        android:layout_centerHorizontal="true"
-        android:textSize="30sp" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/market_items_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/buy_button"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="50sp"
-        android:text="Buy"
-        android:textSize="20sp"
-        android:onClick="onBuyPressed" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/sell_button"
-        android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="50sp"
-        android:text="Sell"
-        android:textSize="20sp"
-        android:onClick="onSellPressed" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/market_cargo_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/market_items_list"/>
 
 </RelativeLayout>
