--- a/app/src/main/res/layout/cargo_item.xml
+++ b/app/src/main/res/layout/cargo_item.xml
@@ -15,6 +15,14 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/cargo_item_amount"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/cargo_item_type"
+        android:textSize="20sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/cargo_sell_text"
         android:layout_alignParentEnd="true"
         android:text="Sell"
