Marketplace is live

--- a/app/src/main/res/layout/content_cargo.xml
+++ b/app/src/main/res/layout/content_cargo.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
@@ -10,4 +12,10 @@
         android:text="this is cargo"
         android:layout_gravity="center_vertical|center_horizontal"
         android:textSize="30dp" />
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/cargo_items_list" />
+
 </LinearLayout>
