--- a/app/src/main/res/layout/content_market.xml
+++ b/app/src/main/res/layout/content_market.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/hello_world"
+        android:text="this is market"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:textSize="30dp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/market_cargo_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</RelativeLayout>
+</LinearLayout>
