--- a/app/src/main/res/layout/market_item.xml
+++ b/app/src/main/res/layout/market_item.xml
@@ -2,6 +2,33 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="10sp">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cargo_item_type"
+        android:layout_alignParentStart="true"
+        android:textSize="20sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cargo_item_amount"
+        android:layout_alignParentStart="true"
+        android:layout_below="@id/cargo_item_type"
+        android:textSize="20sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/cargo_buy_text"
+        android:layout_alignParentEnd="true"
+        android:text="Buy"
+        android:layout_below="@id/cargo_sell_text"
+        android:textSize="20sp"
+        android:onClick="onClick"
+        android:clickable="true"/>
+
 </RelativeLayout>
