--- a/app/src/main/res/layout/content_market.xml
+++ b/app/src/main/res/layout/content_market.xml
@@ -11,6 +11,16 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30sp" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/player_credits"
+        android:text="Currency:"
+        android:textSize="20sp"
+        android:layout_below="@id/market_name"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30sp" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
