--- a/app/src/main/res/layout/market_buy_item.xml
+++ b/app/src/main/res/layout/market_buy_item.xml
@@ -24,11 +24,21 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/item_amount"
+        android:text="Quantity: "
+        android:textSize="15sp"
+        android:layout_below="@id/item_price"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="10sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/buy_text"
         android:text="Buy"
         android:textSize="20sp"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="10sp"
+        android:layout_marginTop="20sp"
         android:layout_marginEnd="10sp" />
 
 </RelativeLayout>
