--- a/app/src/main/res/layout/market_sell_item.xml
+++ b/app/src/main/res/layout/market_sell_item.xml
@@ -24,6 +24,16 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/item_amount"
+        android:text="Quantity: "
+        android:textSize="15sp"
+        android:layout_below="@id/item_price"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="10sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/sell_text"
         android:text="Sell"
         android:textSize="20sp"
