--- a/app/src/main/res/layout/content_universe.xml
+++ b/app/src/main/res/layout/content_universe.xml
@@ -9,8 +9,18 @@
         android:layout_height="wrap_content"
         android:id="@+id/universe_title"
         android:text="Universe"
-        android:textSize="90dp"
+        android:textSize="50dp"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/save_button"
+        android:text="Save"
+        android:layout_below="@id/universe_title"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="60sp"
+        android:onClick="onSavePressed" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -19,7 +29,8 @@
         android:textSize="15sp"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:layout_below="@+id/universe_title"/>
+        android:layout_marginTop="20sp"
+        android:layout_below="@+id/save_button"/>
 
     <TextView
         android:layout_width="wrap_content"
