--- a/app/src/main/res/layout/content_market.xml
+++ b/app/src/main/res/layout/content_market.xml
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/gas_numbers"
         android:layout_below="@+id/market_name"
-        android:layout_alignRight="@+id/gas_bar"
+        android:layout_alignEnd="@+id/gas_bar"
         android:textSize="15sp"/>
 
     <TextView
@@ -74,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/market_sell_button"
-        android:layout_marginLeft="165dp"
+        android:layout_marginStart="165dp"
         android:layout_marginTop="32dp"
         android:onClick="onBuyGas" />
 
@@ -82,7 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="160dp"
+        android:layout_marginStart="160dp"
         android:id="@+id/cancel_button"
         android:text="Cancel"
         android:onClick="onCancel"/>
