--- a/app/src/main/res/layout/content_solar_system.xml
+++ b/app/src/main/res/layout/content_solar_system.xml
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/gas_numbers"
         android:layout_below="@+id/planet_current"
-        android:layout_alignRight="@+id/gas_bar"
+        android:layout_alignEnd="@+id/gas_bar"
         android:textSize="15sp"/>
     <ImageView
         android:layout_width="wrap_content"
@@ -86,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="160dp"
+        android:layout_marginStart="160dp"
         android:id="@+id/cancel_button"
         android:text="Cancel"
         android:onClick="onCancel"/>
