--- a/app/src/main/res/layout/content_police_fine.xml
+++ b/app/src/main/res/layout/content_police_fine.xml
@@ -13,13 +13,24 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/fine_message"
+        android:id="@+id/wanted_message"
         android:textSize="20sp"
         android:layout_below="@id/police_header"
-        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="65sp"
         android:layout_marginEnd="65sp"
         android:layout_marginTop="80sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fine_message"
+        android:textSize="20sp"
+        android:layout_below="@id/wanted_message"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="65sp"
+        android:layout_marginEnd="65sp"
+        android:layout_marginTop="20sp" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -48,7 +59,7 @@
         android:id="@+id/pay_button"
         android:text="Pay Fine"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="70sp"
+        android:layout_marginTop="50sp"
         android:layout_below="@id/player_ship"
         android:onClick="onPayPressed" />
 
@@ -59,7 +70,7 @@
         android:text="Refuse"
         android:layout_centerHorizontal="true"
         android:layout_marginEnd="50sp"
-        android:layout_marginTop="40sp"
+        android:layout_marginTop="20sp"
         android:layout_below="@id/pay_button"
         android:onClick="onRefusePressed" />
 </RelativeLayout>
